{
  "version": 4,
  "terraform_version": "0.14.3",
  "serial": 18,
  "lineage": "a6d6498a-6d99-f12b-3e70-203167a44105",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": true,
            "delete_default_routes_on_create": false,
            "id": "projects/playground-s-11-ba6ec43f/global/networks/new-auto-network",
            "name": "new-auto-network",
            "project": "playground-s-11-ba6ec43f",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/playground-s-11-ba6ec43f/global/networks/new-auto-network"
          }
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "default-hc-fw",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2021-05-06T03:31:22.377-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/playground-s-11-ba6ec43f/global/firewalls/load-balancer-hc",
            "name": "load-balancer-hc",
            "network": "https://www.googleapis.com/compute/v1/projects/playground-s-11-ba6ec43f/global/networks/new-auto-network",
            "priority": 1000,
            "project": "playground-s-11-ba6ec43f",
            "self_link": "https://www.googleapis.com/compute/v1/projects/playground-s-11-ba6ec43f/global/firewalls/load-balancer-hc",
            "source_ranges": [
              "209.85.152.0/22",
              "209.85.204.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "my-target-pool"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "default-lb-fw",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2021-05-06T03:31:22.403-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/playground-s-11-ba6ec43f/global/firewalls/load-balancer-vm-service",
            "name": "load-balancer-vm-service",
            "network": "https://www.googleapis.com/compute/v1/projects/playground-s-11-ba6ec43f/global/networks/new-auto-network",
            "priority": 1000,
            "project": "playground-s-11-ba6ec43f",
            "self_link": "https://www.googleapis.com/compute/v1/projects/playground-s-11-ba6ec43f/global/firewalls/load-balancer-vm-service",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "my-target-pool"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "google_compute_forwarding_rule",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "all_ports": false,
            "creation_timestamp": "2021-05-06T03:29:27.118-07:00",
            "id": "projects/playground-s-11-ba6ec43f/regions/us-central1/forwardingRules/load-balancer",
            "ip_address": "34.71.5.74",
            "ip_protocol": "TCP",
            "load_balancing_scheme": "EXTERNAL",
            "name": "load-balancer",
            "network_tier": "PREMIUM",
            "port_range": "80-80",
            "project": "playground-s-11-ba6ec43f",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/playground-s-11-ba6ec43f/regions/us-central1/forwardingRules/load-balancer",
            "target": "https://www.googleapis.com/compute/v1/projects/playground-s-11-ba6ec43f/regions/us-central1/targetPools/load-balancer"
          },
          "dependencies": [
            "module.lb.google_compute_http_health_check.default",
            "module.lb.google_compute_target_pool.default"
          ]
        }
      ]
    }
  ]
}